[v8.0] Inconsistent state between opCtx and recovery unit after aborting WUOW

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.0.12, 8.0.24
    • Affects Version/s: 8.0.12
    • Component/s: None
    • None
    • Storage Engines - Server Integration
    • Fully Compatible
    • ALL
    • v8.0
    • ReturnOfTheNix - 2026-02-10, SESIPowerPlay - 2026-03-10, SESI DracoPotato - 2026-03-24, SESIBunny - 2026-04-07
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When user writes are disabled, aborting a wuow does not update the state of the opCtx, leaving its internal _ruState inconsistent with the state of the recovery unit. It also doesn't take into account nesting of wuow's. All of this can lead to incorrect construction of subsequent wuow's, as it happened in this patch.

      I haven't checked whether this bug is in master, but it has been fixed after SERVER-93994.

            Assignee:
            Clarisse Cheah
            Reporter:
            Aitor Esteve Alvarado
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: