SERVER-109161 [v8.0] Inconsistent state between opCtx and recovery unit after aborting WUOW (#49950)

GitOrigin-RevId: 2e966c8f36088fc52e695438cde9665add63d142