src/mongo/db/storage/write_unit_of_work.cpp
@@ -77,18 +77,12 @@ WriteUnitOfWork::WriteUnitOfWork(OperationContext* opCtx, OplogEntryGroupType gr
 WriteUnitOfWork::~WriteUnitOfWork() {
     if (!_released && !_committed) {
         invariant(_opCtx->_ruState != RecoveryUnitState::kNotInUnitOfWork);
-        if (!_opCtx->readOnly()) {
-            if (_toplevel) {
-                // Abort unit of work and execute rollback handlers
-                shard_role_details::getRecoveryUnit(_opCtx)->abortUnitOfWork();
-                _opCtx->_ruState = RecoveryUnitState::kNotInUnitOfWork;
-            } else {
-                _opCtx->_ruState = RecoveryUnitState::kFailedUnitOfWork;
-            }
+        if (_toplevel) {
+            // Abort unit of work and execute rollback handlers
+            shard_role_details::getRecoveryUnit(_opCtx)->abortUnitOfWork();
+            _opCtx->_ruState = RecoveryUnitState::kNotInUnitOfWork;
         } else {
-            // Clear the readOnly state and execute rollback handlers in readOnly mode.
-            shard_role_details::getRecoveryUnit(_opCtx)->endReadOnlyUnitOfWork();
-            shard_role_details::getRecoveryUnit(_opCtx)->abortRegisteredChanges();
+            _opCtx->_ruState = RecoveryUnitState::kFailedUnitOfWork;
         }
         shard_role_details::getLocker(_opCtx)->endWriteUnitOfWork();
     }
@@ -146,18 +140,7 @@ void WriteUnitOfWork::commit() {
             sleepFor(Milliseconds(100));
         }
 
-        // Execute preCommit hooks before committing the transaction. This is an opportunity to
-        // throw or do any last changes before committing.
-        shard_role_details::getRecoveryUnit(_opCtx)->runPreCommitHooks(_opCtx);
-        if (!_opCtx->readOnly()) {
-            // Commit unit of work and execute commit or rollback handlers depending on whether the
-            // commit was successful.
-            shard_role_details::getRecoveryUnit(_opCtx)->commitUnitOfWork();
-        } else {
-            // Just execute commit handlers in readOnly mode
-            shard_role_details::getRecoveryUnit(_opCtx)->commitRegisteredChanges(boost::none);
-        }
-
+        shard_role_details::getRecoveryUnit(_opCtx)->commitUnitOfWork();
         _opCtx->_ruState = RecoveryUnitState::kNotInUnitOfWork;
     }
     shard_role_details::getLocker(_opCtx)->endWriteUnitOfWork();
